--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -17,10 +17,10 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13'
-    
+
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.4'
+    compile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.1.1'
     
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
